# base-fastapi

./: README.md  docker-compose.yaml  pyproject.toml
src/: .env.template  main.py
src/alembic/versions/: 2026_02_04_2333-09095faa183c_create_users_table.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  users.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  user.py
src/crud/: users.py
